#364 - Fix mobile menu 1px gap

--- a/src/Recollections.Blazor.UI/wwwroot/css/site.scss
+++ b/src/Recollections.Blazor.UI/wwwroot/css/site.scss
@@ -88,7 +88,7 @@ footer.navbar {
 
 .offcanvas-bottom-menu {
     --bs-offcanvas-height: 420px;
-    bottom: 55px;
+    bottom: 54px;
 }
 
 blockquote {
